Fixing some spacing - giving it some room
Also fixed some centering issues on mobile. Think i fixed.

--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -52,7 +52,7 @@ p {
 
 
 .alt-menu {
-    margin-top: 2em;
+    margin-top: 4em;
 }
 
 .alt-logo {
@@ -417,9 +417,13 @@ ARROWS THAT TRACK CURSOR
     background-position: top center;
     background-repeat: no-repeat;
     position: relative;
-    padding: 30px 0
+    padding: 30px 0;
 }
 
+#topic-parent .container {
+    height: auto;
+    padding-bottom: 60px;
+}
 
 .topic-slide {
     height: 120px;
@@ -1242,6 +1246,11 @@ blockquote.default {
             display: none;
         }
 
+        .alt-big-menu {
+            padding-left: 0;
+            padding-right: 0;
+        }
+
         .menu-item {
             font-size: 1em;
             text-align: center;
@@ -1279,9 +1288,9 @@ blockquote.default {
             padding-bottom: 40px;
         }
 
-        #topic-parent .container {
-            height: 300px;
-        }
+        // #topic-parent .container {
+        //     height: 300px;
+        // }
 
         .interested {
             margin-top: 15px;
